<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meal Recipe</string>
    <string name="title_1">Find Your Best</string>
    <string name="subtitle_1">Meal Recipes</string>
    <string name="title_search">Search Recipes</string>
    <string name="title_recipe_filter">Recipe filter</string>
    <string name="title_based_on">Based on</string>
    <string name="title_meal">Meals</string>
    <string name="title_area">Areas</string>
    <string name="title_apply">Apply</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_description">Description</string>
    <string name="title_instruction">Instruction</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_tags">Tag</string>
    <string name="title_trailer">Food recipe trailer</string>
    <string name="title_empty_data">Empty Data</string>
    <string name="title_empty_data_description">Data searched was not found</string>
</resources>